[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/props/Parchment.gd" type="Script" id=1]
[ext_resource path="res://src/props/TimerBar.gd" type="Script" id=2]
[ext_resource path="res://src/assets/WhiteRect.png" type="Texture" id=3]
[ext_resource path="res://src/assets/BlackRect.png" type="Texture" id=4]

[node name="Parchment" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -96.0
margin_top = -128.0
margin_right = 96.0
margin_bottom = 128.0
color = Color( 0.866667, 0.784314, 0.584314, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 72.0
margin_top = 64.0
margin_right = 112.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Label2" type="Label" parent="ColorRect"]
margin_left = 72.0
margin_top = 104.0
margin_right = 112.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"

[node name="Label3" type="Label" parent="ColorRect"]
margin_left = 72.0
margin_top = 160.0
margin_right = 112.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"

[node name="TimerBar" type="Line2D" parent="."]
position = Vector2( -48, -152 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 20.0
default_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="RecipieTime" type="Timer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -88.0
margin_top = 96.0
margin_right = 82.0
margin_bottom = 250.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[connection signal="time_to_die" from="TimerBar" to="." method="_on_TimerBar_time_to_die"]
[connection signal="timeout" from="RecipieTime" to="TimerBar" method="_on_RecipieTime_timeout"]
